--- a/src/code/utils/lang/zh-TW.json
+++ b/src/code/utils/lang/zh-TW.json
@@ -102,5 +102,24 @@
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_SAVE_ELSEWHERE": "儲存至其他位置",
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "稍後操作",
     "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "The Concord Cloud has been shut down!",
-    "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "Please save your documents to another location."
+    "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "Please save your documents to another location.",
+    "~SHARE_DIALOG.SHARE_STATE": "Shared view is %{state}",
+    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "enabled",
+    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "disabled",
+    "~SHARE_DIALOG.ENABLE_SHARING": "Enable sharing",
+    "~SHARE_DIALOG.STOP_SHARING": "Stop sharing",
+    "~SHARE_DIALOG.UPDATE_SHARING": "Update shared view",
+    "~SHARE_DIALOG.PREVIEW_SHARING": "Preview shared view",
+    "~SHARE_DIALOG.ENABLE_SHARING_MESSAGE": "When sharing is enabled, a copy of the current view is created.  This copy can be shared.",
+    "~SHARE_DIALOG.LINK_TAB": "Link",
+    "~SHARE_DIALOG.LINK_MESSAGE": "Paste this into an email or text message ",
+    "~SHARE_DIALOG.EMBED_TAB": "Embed",
+    "~SHARE_DIALOG.EMBED_MESSAGE": "Embed code for including in webpages or other web-based content",
+    "~SHARE_DIALOG.LARA_TAB": "LARA",
+    "~SHARE_DIALOG.LARA_MESSAGE": "Use this link when creating an activity in LARA",
+    "~SHARE_DIALOG.LARA_CODAP_URL": "CODAP Server URL:",
+    "~SHARE_DIALOG.LARA_AUTOLAUNCH_PAGE": "Autolaunch page",
+    "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "Fullscreen button and scaling",
+    "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "Launch Button Text:",
+    "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "Display data visibility toggles on graphs"
 }
