--- a/src/code/utils/lang/de.json
+++ b/src/code/utils/lang/de.json
@@ -103,7 +103,7 @@
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "I'll do it later",
     "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "The Concord Cloud has been shut down!",
     "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "Please save your documents to another location.",
-    "~SHARE_DIALOG.SHARE_STATE": "Shared view is %{state}",
+    "~SHARE_DIALOG.SHARE_STATE": "Shared view: ",
     "~SHARE_DIALOG.SHARE_STATE_ENABLED": "enabled",
     "~SHARE_DIALOG.SHARE_STATE_DISABLED": "disabled",
     "~SHARE_DIALOG.ENABLE_SHARING": "Enable sharing",
