--- a/src/code/utils/lang/en-US.json
+++ b/src/code/utils/lang/en-US.json
@@ -68,7 +68,7 @@
   "~SHARE_DIALOG.COPY_TITLE": "Copy Result",
   "~SHARE_DIALOG.LONGEVITY_WARNING": "The shared copy of this document will be retained until it has not been accessed for over a year.",
 
-  "~SHARE_DIALOG.SHARE_STATE": "Shared view is %{state}",
+  "~SHARE_DIALOG.SHARE_STATE": "Shared view: ",
   "~SHARE_DIALOG.SHARE_STATE_ENABLED": "enabled",
   "~SHARE_DIALOG.SHARE_STATE_DISABLED": "disabled",
   "~SHARE_DIALOG.ENABLE_SHARING": "Enable sharing",
