--- a/src/code/utils/lang/es.json
+++ b/src/code/utils/lang/es.json
@@ -103,7 +103,7 @@
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "Lo haré más tarde",
     "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "Concord Cloud ha sido cerrado",
     "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "Por favor guardar sus documentos en otra ubicación.",
-    "~SHARE_DIALOG.SHARE_STATE": "Shared view is %{state}",
+    "~SHARE_DIALOG.SHARE_STATE": "Shared view: ",
     "~SHARE_DIALOG.SHARE_STATE_ENABLED": "enabled",
     "~SHARE_DIALOG.SHARE_STATE_DISABLED": "disabled",
     "~SHARE_DIALOG.ENABLE_SHARING": "Enable sharing",
