Incorporate new German and Chinese translations

--- a/src/code/utils/lang/de.json
+++ b/src/code/utils/lang/de.json
@@ -67,16 +67,16 @@
     "~CONFIRM.CLOSE_FILE": "You have unsaved changes. Are you sure you want to close the document?",
     "~CONFIRM.REVERT_TO_LAST_OPENED": "Are you sure you want to revert the document to its most recently opened state?",
     "~CONFIRM.REVERT_TO_SHARED_VIEW": "Are you sure you want to revert the document to its most recently shared state?",
-    "~CONFIRM_DIALOG.TITLE": "Are you sure?",
+    "~CONFIRM_DIALOG.TITLE": "Sind Sie sicher?",
     "~CONFIRM_DIALOG.YES": "Ja",
     "~CONFIRM_DIALOG.NO": "Nein",
-    "~LOCAL_FILE_DIALOG.DROP_FILE_HERE": "Drop file here or click here to select a file.",
-    "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_SELECTED": "Sorry, you can choose only one file to open.",
-    "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_DROPPED": "Sorry, you can't drop more than one file.",
-    "~IMPORT.LOCAL_FILE": "Local File",
+    "~LOCAL_FILE_DIALOG.DROP_FILE_HERE": "Datei hierher ziehen oder klicken, um eine Datei auszuwählen",
+    "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_SELECTED": "Es kann nur eine Datei ausgewählt werden.",
+    "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_DROPPED": "Sie können nur eine Datei hierher ziehen.",
+    "~IMPORT.LOCAL_FILE": "Lokale Datei",
     "~IMPORT.URL": "URL",
-    "~IMPORT_URL.MULTIPLE_URLS_DROPPED": "Sorry, you can choose only one url to open.",
-    "~IMPORT_URL.PLEASE_ENTER_URL": "Please enter a url to import.",
+    "~IMPORT_URL.MULTIPLE_URLS_DROPPED": "Es kann nur eine URL verwendet werden.",
+    "~IMPORT_URL.PLEASE_ENTER_URL": "Adresse zum Importieren eingeben.",
     "~URL_TAB.DROP_URL_HERE": "Drop URL here or enter URL below",
     "~URL_TAB.IMPORT": "Import",
     "~CLIENT_ERROR.TITLE": "Error",
