--- a/src/code/utils/lang/zh-TW.json
+++ b/src/code/utils/lang/zh-TW.json
@@ -104,14 +104,14 @@
     "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "The Concord Cloud has been shut down!",
     "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "Please save your documents to another location.",
     "~SHARE_DIALOG.SHARE_STATE": "Shared view: ",
-    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "enabled",
-    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "disabled",
+    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "啟用",
+    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "中止",
     "~SHARE_DIALOG.ENABLE_SHARING": "Enable sharing",
     "~SHARE_DIALOG.STOP_SHARING": "Stop sharing",
-    "~SHARE_DIALOG.UPDATE_SHARING": "Update shared view",
-    "~SHARE_DIALOG.PREVIEW_SHARING": "Preview shared view",
+    "~SHARE_DIALOG.UPDATE_SHARING": "更新文件內容",
+    "~SHARE_DIALOG.PREVIEW_SHARING": "預習文件內容",
     "~SHARE_DIALOG.ENABLE_SHARING_MESSAGE": "When sharing is enabled, a copy of the current view is created.  This copy can be shared.",
-    "~SHARE_DIALOG.LINK_TAB": "Link",
+    "~SHARE_DIALOG.LINK_TAB": "文件連結",
     "~SHARE_DIALOG.LINK_MESSAGE": "Paste this into an email or text message ",
     "~SHARE_DIALOG.EMBED_TAB": "Embed",
     "~SHARE_DIALOG.EMBED_MESSAGE": "Embed code for including in webpages or other web-based content",
