--- a/src/code/utils/lang/nb.json
+++ b/src/code/utils/lang/nb.json
@@ -45,7 +45,6 @@
     "~FILE_DIALOG.LOADING": "Laster...",
     "~FILE_DIALOG.LOAD_FOLDER_ERROR": "***Feil ved lasting av innholdet i mappa***",
     "~FILE_DIALOG.DOWNLOAD": "Last ned",
-    "~FILE_DIALOG.DOWNLOAD_NOTE": "MERK: Hvis fila er \"Uknown\" i Safari, angi .codap som fil-endelse.",
     "~DOWNLOAD_DIALOG.DOWNLOAD": "Last ned",
     "~DOWNLOAD_DIALOG.CANCEL": "Avbryt",
     "~DOWNLOAD_DIALOG.INCLUDE_SHARE_INFO": "Inkludér delingsinformasjon i den nedlastede fila",
@@ -121,6 +120,5 @@
     "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "Fullskjermknapp og skalering",
     "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "Tekst på \"Last\"-knapp:",
     "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "Vis knapp for synlighet av data i grafer",
-    "~CONFIRM.CHANGE_LANGUAGE": "Du har endringer som ikke er lagret. Er du sikker på at du vil endre språk?",
-    "~FILE_STATUS.FAILURE": "Retrying..."
+    "~CONFIRM.CHANGE_LANGUAGE": "Du har endringer som ikke er lagret. Er du sikker på at du vil endre språk?"
 }
