--- a/src/code/utils/lang/nn.json
+++ b/src/code/utils/lang/nn.json
@@ -45,7 +45,6 @@
     "~FILE_DIALOG.LOADING": "Lastar...",
     "~FILE_DIALOG.LOAD_FOLDER_ERROR": "*** Feil ved lasting av innholdet i mappa ***",
     "~FILE_DIALOG.DOWNLOAD": "Last ned",
-    "~FILE_DIALOG.DOWNLOAD_NOTE": "MERK: I Safari kan fila være \"Ukjent\", og den må få nytt namn med endinga .codap",
     "~DOWNLOAD_DIALOG.DOWNLOAD": "Last ned",
     "~DOWNLOAD_DIALOG.CANCEL": "Avbryt",
     "~DOWNLOAD_DIALOG.INCLUDE_SHARE_INFO": "Inkluder detaljer om deling i den nedlasta fila",
@@ -121,6 +120,5 @@
     "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "Fullskjerm-knapp og skalering",
     "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "Tekst på \"Last\"-knapp:",
     "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "Vis knapp for synlegheit av data i grafar",
-    "~CONFIRM.CHANGE_LANGUAGE": "Du har endringer som ikkje er lagra. Er du sikker på at vil byte språk?",
-    "~FILE_STATUS.FAILURE": "Retrying..."
+    "~CONFIRM.CHANGE_LANGUAGE": "Du har endringer som ikkje er lagra. Er du sikker på at vil byte språk?"
 }
