--- a/src/code/utils/lang/ja.json
+++ b/src/code/utils/lang/ja.json
@@ -19,106 +19,106 @@
     "~DIALOG.SAVE": "保存する",
     "~DIALOG.SAVE_AS": "保存先を選択する",
     "~DIALOG.EXPORT_AS": "ファイルを転送する",
-    "~DIALOG.CREATE_COPY": "Create A Copy ...",
-    "~DIALOG.OPEN": "Open",
-    "~DIALOG.DOWNLOAD": "Download",
-    "~DIALOG.RENAME": "Rename",
-    "~DIALOG.SHARED": "Share",
-    "~DIALOG.IMPORT_DATA": "Import Data",
-    "~PROVIDER.LOCAL_STORAGE": "Local Storage",
-    "~PROVIDER.READ_ONLY": "Read Only",
+    "~DIALOG.CREATE_COPY": "コピーを作成する",
+    "~DIALOG.OPEN": "開く",
+    "~DIALOG.DOWNLOAD": "ダウンロード",
+    "~DIALOG.RENAME": "名前の変更",
+    "~DIALOG.SHARED": "共有する",
+    "~DIALOG.IMPORT_DATA": "データを取り込む",
+    "~PROVIDER.LOCAL_STORAGE": "内部ストレージ",
+    "~PROVIDER.READ_ONLY": "読み込みに限る",
     "~PROVIDER.GOOGLE_DRIVE": "Google Drive",
     "~PROVIDER.DOCUMENT_STORE": "Concord Cloud",
-    "~PROVIDER.LOCAL_FILE": "Local File",
-    "~FILE_STATUS.SAVING": "Saving...",
-    "~FILE_STATUS.SAVED": "All changes saved",
-    "~FILE_STATUS.SAVED_TO_PROVIDER": "All changes saved to %{providerName}",
-    "~FILE_STATUS.UNSAVED": "Unsaved",
-    "~FILE_DIALOG.FILENAME": "Filename",
-    "~FILE_DIALOG.OPEN": "Open",
-    "~FILE_DIALOG.SAVE": "Save",
-    "~FILE_DIALOG.CANCEL": "Cancel",
-    "~FILE_DIALOG.REMOVE": "Delete",
-    "~FILE_DIALOG.REMOVE_CONFIRM": "Are you sure you want to delete %{filename}?",
-    "~FILE_DIALOG.REMOVED_TITLE": "Deleted File",
-    "~FILE_DIALOG.REMOVED_MESSAGE": "%{filename} was deleted",
-    "~FILE_DIALOG.LOADING": "Loading...",
-    "~FILE_DIALOG.LOAD_FOLDER_ERROR": "*** Error loading folder contents ***",
-    "~FILE_DIALOG.DOWNLOAD": "Download",
-    "~DOWNLOAD_DIALOG.DOWNLOAD": "Download",
-    "~DOWNLOAD_DIALOG.CANCEL": "Cancel",
-    "~DOWNLOAD_DIALOG.INCLUDE_SHARE_INFO": "Include sharing information in downloaded file",
-    "~RENAME_DIALOG.RENAME": "Rename",
-    "~RENAME_DIALOG.CANCEL": "Cancel",
-    "~SHARE_DIALOG.COPY": "Copy",
-    "~SHARE_DIALOG.VIEW": "View",
-    "~SHARE_DIALOG.CLOSE": "Close",
-    "~SHARE_DIALOG.COPY_SUCCESS": "The info has been copied to the clipboard.",
-    "~SHARE_DIALOG.COPY_ERROR": "Sorry, the info was not able to be copied to the clipboard.",
-    "~SHARE_DIALOG.COPY_TITLE": "Copy Result",
-    "~SHARE_DIALOG.LONGEVITY_WARNING": "The shared copy of this document will be retained until it has not been accessed for over a year.",
-    "~SHARE_UPDATE.TITLE": "Shared View Updated",
-    "~SHARE_UPDATE.MESSAGE": "The shared view was updated successfully.",
-    "~CONFIRM.OPEN_FILE": "You have unsaved changes. Are you sure you want to open a new document?",
-    "~CONFIRM.NEW_FILE": "You have unsaved changes. Are you sure you want to create a new document?",
-    "~CONFIRM.AUTHORIZE_OPEN": "Authorization is required to open the document. Would you like to proceed with authorization?",
-    "~CONFIRM.AUTHORIZE_SAVE": "Authorization is required to save the document. Would you like to proceed with authorization?",
-    "~CONFIRM.CLOSE_FILE": "You have unsaved changes. Are you sure you want to close the document?",
-    "~CONFIRM.REVERT_TO_LAST_OPENED": "Are you sure you want to revert the document to its most recently opened state?",
-    "~CONFIRM.REVERT_TO_SHARED_VIEW": "Are you sure you want to revert the document to its most recently shared state?",
-    "~CONFIRM_DIALOG.TITLE": "Are you sure?",
-    "~CONFIRM_DIALOG.YES": "Yes",
-    "~CONFIRM_DIALOG.NO": "No",
-    "~LOCAL_FILE_DIALOG.DROP_FILE_HERE": "Drop file here or click here to select a file.",
-    "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_SELECTED": "Sorry, you can choose only one file to open.",
-    "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_DROPPED": "Sorry, you can't drop more than one file.",
-    "~IMPORT.LOCAL_FILE": "Local File",
+    "~PROVIDER.LOCAL_FILE": "ファイル形式",
+    "~FILE_STATUS.SAVING": "保存する…",
+    "~FILE_STATUS.SAVED": "すべての変更を保存する",
+    "~FILE_STATUS.SAVED_TO_PROVIDER": "全ての変更が%{providerName}に保存されました",
+    "~FILE_STATUS.UNSAVED": "未保存です",
+    "~FILE_DIALOG.FILENAME": "ファイル名",
+    "~FILE_DIALOG.OPEN": "開く",
+    "~FILE_DIALOG.SAVE": "保存",
+    "~FILE_DIALOG.CANCEL": "キャンセル",
+    "~FILE_DIALOG.REMOVE": "削除",
+    "~FILE_DIALOG.REMOVE_CONFIRM": "%{filename}を削除しますか",
+    "~FILE_DIALOG.REMOVED_TITLE": "削除されたファイル",
+    "~FILE_DIALOG.REMOVED_MESSAGE": "%{filename}は削除されました",
+    "~FILE_DIALOG.LOADING": "読み込み中です…",
+    "~FILE_DIALOG.LOAD_FOLDER_ERROR": "*** フォルダー内容のエラーを読み込み中  ***",
+    "~FILE_DIALOG.DOWNLOAD": "ダウンロード",
+    "~DOWNLOAD_DIALOG.DOWNLOAD": "ダウンロード",
+    "~DOWNLOAD_DIALOG.CANCEL": "キャンセル",
+    "~DOWNLOAD_DIALOG.INCLUDE_SHARE_INFO": "ダウンロードファイル内の共有情報を含む",
+    "~RENAME_DIALOG.RENAME": "名前の変更",
+    "~RENAME_DIALOG.CANCEL": "キャンセル",
+    "~SHARE_DIALOG.COPY": "コピー",
+    "~SHARE_DIALOG.VIEW": "画面",
+    "~SHARE_DIALOG.CLOSE": "閉じる",
+    "~SHARE_DIALOG.COPY_SUCCESS": "クリップボードにコピーされました。",
+    "~SHARE_DIALOG.COPY_ERROR": "申し訳ありませんが、クリップボードにコピーできませんでした。",
+    "~SHARE_DIALOG.COPY_TITLE": "コピー結果",
+    "~SHARE_DIALOG.LONGEVITY_WARNING": "この文書の共有コピーは1年間保存されました。",
+    "~SHARE_UPDATE.TITLE": "共有画面を上書きする",
+    "~SHARE_UPDATE.MESSAGE": "共有画面の上書きに成功しました。",
+    "~CONFIRM.OPEN_FILE": "変更が保存されていません。新しい文書を開きますか？",
+    "~CONFIRM.NEW_FILE": "変更が保存されていません。新しい文書を作成しますか？",
+    "~CONFIRM.AUTHORIZE_OPEN": "文書を開くのに承認が必要です。承認を行いますか？",
+    "~CONFIRM.AUTHORIZE_SAVE": "文書を保存するのに承認が必要です。承認を行いますか？",
+    "~CONFIRM.CLOSE_FILE": "変更が保存されていません。文書を閉じますか？",
+    "~CONFIRM.REVERT_TO_LAST_OPENED": "最近開かれた状態へ文書を変換してもよろしいでしょうか？",
+    "~CONFIRM.REVERT_TO_SHARED_VIEW": "最近共有された状態へ文書を変換してもよろしいでしょうか？",
+    "~CONFIRM_DIALOG.TITLE": "よろしいですか？",
+    "~CONFIRM_DIALOG.YES": "イエス",
+    "~CONFIRM_DIALOG.NO": "ノー",
+    "~LOCAL_FILE_DIALOG.DROP_FILE_HERE": "ファイルを選択するために、ここへファイルをドロップするか、ここをクリックしてください。",
+    "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_SELECTED": "申し訳ありませんが、開けるファイルは一つまでです。",
+    "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_DROPPED": "申し訳ありませんが、ドロップできるファイルは一つまでです。",
+    "~IMPORT.LOCAL_FILE": "ファイル形式",
     "~IMPORT.URL": "URL",
-    "~IMPORT_URL.MULTIPLE_URLS_DROPPED": "Sorry, you can choose only one url to open.",
-    "~IMPORT_URL.PLEASE_ENTER_URL": "Please enter a url to import.",
-    "~URL_TAB.DROP_URL_HERE": "Drop URL here or enter URL below",
-    "~URL_TAB.IMPORT": "Import",
-    "~CLIENT_ERROR.TITLE": "Error",
-    "~ALERT_DIALOG.TITLE": "Alert",
-    "~ALERT_DIALOG.CLOSE": "Close",
-    "~ALERT.NO_PROVIDER": "Could not open the specified document because an appropriate provider is not available.",
-    "~GOOGLE_DRIVE.LOGIN_BUTTON_LABEL": "Login to Google",
-    "~GOOGLE_DRIVE.CONNECTING_MESSAGE": "Connecting to Google...",
-    "~GOOGLE_DRIVE.ERROR_MISSING_CLIENTID": "Missing required clientId in googleDrive provider options",
-    "~DOCSTORE.LOAD_403_ERROR": "You don't have permission to load %{filename}.<br><br>If you are using some else's shared document it may have been unshared.",
-    "~DOCSTORE.LOAD_SHARED_404_ERROR": "Unable to load the requested shared document.<br><br>Perhaps the file was not shared?",
-    "~DOCSTORE.LOAD_404_ERROR": "Unable to load %{filename}",
-    "~DOCSTORE.SAVE_403_ERROR": "You don't have permission to save '%{filename}'.<br><br>You may need to log in again.",
-    "~DOCSTORE.SAVE_DUPLICATE_ERROR": "Unable to create %{filename}.  File already exists.",
-    "~DOCSTORE.SAVE_ERROR_WITH_MESSAGE": "Unable to save %{filename}: [%{message}]",
-    "~DOCSTORE.SAVE_ERROR": "Unable to save %{filename}",
-    "~DOCSTORE.REMOVE_403_ERROR": "You don't have permission to remove %{filename}.<br><br>You may need to log in again.",
-    "~DOCSTORE.REMOVE_ERROR": "Unable to remove %{filename}",
-    "~DOCSTORE.RENAME_403_ERROR": "You don't have permission to rename %{filename}.<br><br>You may need to log in again.",
-    "~DOCSTORE.RENAME_ERROR": "Unable to rename %{filename}",
-    "~CONCORD_CLOUD_DEPRECATION.CONFIRM_SAVE_TITLE": "Concord Cloud Alert",
-    "~CONCORD_CLOUD_DEPRECATION.ALERT_SAVE_TITLE": "Concord Cloud Alert",
-    "~CONCORD_CLOUD_DEPRECATION.CONFIRM_SAVE_ELSEWHERE": "Save Elsewhere",
-    "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "I'll do it later",
-    "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "The Concord Cloud has been shut down!",
-    "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "Please save your documents to another location.",
-    "~SHARE_DIALOG.SHARE_STATE": "Shared view: ",
-    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "enabled",
-    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "disabled",
-    "~SHARE_DIALOG.ENABLE_SHARING": "Enable sharing",
-    "~SHARE_DIALOG.STOP_SHARING": "Stop sharing",
-    "~SHARE_DIALOG.UPDATE_SHARING": "Update shared view",
-    "~SHARE_DIALOG.PREVIEW_SHARING": "Preview shared view",
-    "~SHARE_DIALOG.ENABLE_SHARING_MESSAGE": "When sharing is enabled, a copy of the current view is created.  This copy can be shared.",
-    "~SHARE_DIALOG.LINK_TAB": "Link",
-    "~SHARE_DIALOG.LINK_MESSAGE": "Paste this into an email or text message ",
-    "~SHARE_DIALOG.EMBED_TAB": "Embed",
-    "~SHARE_DIALOG.EMBED_MESSAGE": "Embed code for including in webpages or other web-based content",
-    "~SHARE_DIALOG.LARA_MESSAGE": "Use this link when creating an activity in LARA",
-    "~SHARE_DIALOG.LARA_CODAP_URL": "CODAP Server URL:",
-    "~SHARE_DIALOG.LARA_AUTOLAUNCH_PAGE": "Autolaunch page",
-    "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "Fullscreen button and scaling",
-    "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "Launch Button Text:",
-    "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "Display data visibility toggles on graphs",
-    "~CONFIRM.CHANGE_LANGUAGE": "You have unsaved changes. Are you sure you want to change languages?"
+    "~IMPORT_URL.MULTIPLE_URLS_DROPPED": "申し訳ありませんが、開けるURLは一つまでです。",
+    "~IMPORT_URL.PLEASE_ENTER_URL": "取り込むURLを入力してください。",
+    "~URL_TAB.DROP_URL_HERE": "ここにURLを落とし込むか、以下にURLを入力してください",
+    "~URL_TAB.IMPORT": "取り込み",
+    "~CLIENT_ERROR.TITLE": "エラー",
+    "~ALERT_DIALOG.TITLE": "警告",
+    "~ALERT_DIALOG.CLOSE": "閉じる",
+    "~ALERT.NO_PROVIDER": "適切なプロバイダーが利用できないため、この文章を開けません。",
+    "~GOOGLE_DRIVE.LOGIN_BUTTON_LABEL": "グーグルにログインします",
+    "~GOOGLE_DRIVE.CONNECTING_MESSAGE": "グーグルに接続しています…",
+    "~GOOGLE_DRIVE.ERROR_MISSING_CLIENTID": "グーグルドライブとの接続に失敗しました",
+    "~DOCSTORE.LOAD_403_ERROR": "%{filename}をロードするのに承認が必要です。<br><br>もしあなたが他の人の共有された文章を使っているならば、それは共有されていない可能性があります。",
+    "~DOCSTORE.LOAD_SHARED_404_ERROR": "共有文章の読み込みに失敗しました。<br><br>文章が共有されていない可能性はありませんか？",
+    "~DOCSTORE.LOAD_404_ERROR": "%{filename}の読み込みに失敗しました",
+    "~DOCSTORE.SAVE_403_ERROR": "'%{filename}'を保存する権限がありません。<br><br>再びログインする必要性があるかもしれません。",
+    "~DOCSTORE.SAVE_DUPLICATE_ERROR": "%{filename}を作成することができません。文章は既に存在しています。",
+    "~DOCSTORE.SAVE_ERROR_WITH_MESSAGE": "%{filename}: [%{message}]を保存することができません",
+    "~DOCSTORE.SAVE_ERROR": "%{filename}を保存することができません",
+    "~DOCSTORE.REMOVE_403_ERROR": "%{filename}を削除するためには承認が必要です。<br><br>再びログインする可能性があります。",
+    "~DOCSTORE.REMOVE_ERROR": "%{filename}を削除することができません",
+    "~DOCSTORE.RENAME_403_ERROR": "%{filename}の名前を変更するには承認が必要です。<br><br>再びログインする可能性があります。",
+    "~DOCSTORE.RENAME_ERROR": "%{filename}の名前を変更することができません。",
+    "~CONCORD_CLOUD_DEPRECATION.CONFIRM_SAVE_TITLE": "Concord Cloud アラート",
+    "~CONCORD_CLOUD_DEPRECATION.ALERT_SAVE_TITLE": "Concord Cloud アラート",
+    "~CONCORD_CLOUD_DEPRECATION.CONFIRM_SAVE_ELSEWHERE": "他の場所に保存する",
+    "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "後で行います",
+    "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "Concord Cloudはシャットダウンしました。",
+    "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "他の場所に文書を保存してください",
+    "~SHARE_DIALOG.SHARE_STATE": "共有画面：",
+    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "できます",
+    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "できていません",
+    "~SHARE_DIALOG.ENABLE_SHARING": "共有可能です",
+    "~SHARE_DIALOG.STOP_SHARING": "共有を停止します",
+    "~SHARE_DIALOG.UPDATE_SHARING": "共有画面を上書きします",
+    "~SHARE_DIALOG.PREVIEW_SHARING": "共有画面のプレビュー",
+    "~SHARE_DIALOG.ENABLE_SHARING_MESSAGE": "共有ができるとき、現在の画面のコピーが作成されます。\nこのコピーは共有できます。",
+    "~SHARE_DIALOG.LINK_TAB": "リンク",
+    "~SHARE_DIALOG.LINK_MESSAGE": "メールアドレスかテキストを貼り付けてください。",
+    "~SHARE_DIALOG.EMBED_TAB": "埋め込み",
+    "~SHARE_DIALOG.EMBED_MESSAGE": "ウェブページもしくは他のウェブベースコンテンツに埋め込まれたコード",
+    "~SHARE_DIALOG.LARA_MESSAGE": " LARAで活動を作成するときにこのリンクを用います",
+    "~SHARE_DIALOG.LARA_CODAP_URL": "CODAPサーバーURL:",
+    "~SHARE_DIALOG.LARA_AUTOLAUNCH_PAGE": "自動開始ページ",
+    "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "フルスクリーンボタンおよびスケール",
+    "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "ボタンのテキストを始める",
+    "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "グラフ上にデータ可視化タグを表示する",
+    "~CONFIRM.CHANGE_LANGUAGE": "変更が保存されていません。言語を変更してもよろしいですか。"
 }
