Revisions to Japanese strings.

--- a/src/code/utils/lang/ja.json
+++ b/src/code/utils/lang/ja.json
@@ -1,6 +1,6 @@
 {
-    "~MENUBAR.UNTITLED_DOCUMENT": "未保存のドキュメント",
-    "~MENU.NEW": "新しい",
+    "~MENUBAR.UNTITLED_DOCUMENT": "未保存のファイル",
+    "~MENU.NEW": "新規",
     "~MENU.OPEN": "開く",
     "~MENU.CLOSE": "閉じる",
     "~MENU.IMPORT_DATA": "データを取り込む",
@@ -29,7 +29,7 @@
     "~PROVIDER.READ_ONLY": "読み込みに限る",
     "~PROVIDER.GOOGLE_DRIVE": "Google Drive",
     "~PROVIDER.DOCUMENT_STORE": "Concord Cloud",
-    "~PROVIDER.LOCAL_FILE": "ファイル形式",
+    "~PROVIDER.LOCAL_FILE": "自分のファイル",
     "~FILE_STATUS.SAVING": "保存する…",
     "~FILE_STATUS.SAVED": "すべての変更を保存する",
     "~FILE_STATUS.SAVED_TO_PROVIDER": "全ての変更が%{providerName}に保存されました",
@@ -59,34 +59,34 @@
     "~SHARE_DIALOG.LONGEVITY_WARNING": "この文書の共有コピーは1年間保存されました。",
     "~SHARE_UPDATE.TITLE": "共有画面を上書きする",
     "~SHARE_UPDATE.MESSAGE": "共有画面の上書きに成功しました。",
-    "~CONFIRM.OPEN_FILE": "変更が保存されていません。新しい文書を開きますか？",
-    "~CONFIRM.NEW_FILE": "変更が保存されていません。新しい文書を作成しますか？",
-    "~CONFIRM.AUTHORIZE_OPEN": "文書を開くのに承認が必要です。承認を行いますか？",
-    "~CONFIRM.AUTHORIZE_SAVE": "文書を保存するのに承認が必要です。承認を行いますか？",
-    "~CONFIRM.CLOSE_FILE": "変更が保存されていません。文書を閉じますか？",
-    "~CONFIRM.REVERT_TO_LAST_OPENED": "最近開かれた状態へ文書を変換してもよろしいでしょうか？",
-    "~CONFIRM.REVERT_TO_SHARED_VIEW": "最近共有された状態へ文書を変換してもよろしいでしょうか？",
+    "~CONFIRM.OPEN_FILE": "変更が保存されていません。新しいファイルを開きますか？",
+    "~CONFIRM.NEW_FILE": "変更が保存されていません。新しいファイルを作成しますか？",
+    "~CONFIRM.AUTHORIZE_OPEN": "ファイルを開くのに承認が必要です。承認を行いますか？",
+    "~CONFIRM.AUTHORIZE_SAVE": "ファイルを保存するのに承認が必要です。承認を行いますか？",
+    "~CONFIRM.CLOSE_FILE": "変更が保存されていません。ファイルを閉じますか？",
+    "~CONFIRM.REVERT_TO_LAST_OPENED": "最近開かれた状態へファイルを変換してもよろしいでしょうか？",
+    "~CONFIRM.REVERT_TO_SHARED_VIEW": "最近共有された状態へファイルを変換してもよろしいでしょうか？",
     "~CONFIRM_DIALOG.TITLE": "よろしいですか？",
     "~CONFIRM_DIALOG.YES": "イエス",
     "~CONFIRM_DIALOG.NO": "ノー",
-    "~LOCAL_FILE_DIALOG.DROP_FILE_HERE": "ファイルを選択するために、ここへファイルをドロップするか、ここをクリックしてください。",
+    "~LOCAL_FILE_DIALOG.DROP_FILE_HERE": "ここへファイルをドロップするか、クリックするとファイルが開けます。",
     "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_SELECTED": "申し訳ありませんが、開けるファイルは一つまでです。",
     "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_DROPPED": "申し訳ありませんが、ドロップできるファイルは一つまでです。",
-    "~IMPORT.LOCAL_FILE": "ファイル形式",
+    "~IMPORT.LOCAL_FILE": "自分のファイル",
     "~IMPORT.URL": "URL",
     "~IMPORT_URL.MULTIPLE_URLS_DROPPED": "申し訳ありませんが、開けるURLは一つまでです。",
     "~IMPORT_URL.PLEASE_ENTER_URL": "取り込むURLを入力してください。",
-    "~URL_TAB.DROP_URL_HERE": "ここにURLを落とし込むか、以下にURLを入力してください",
+    "~URL_TAB.DROP_URL_HERE": "ここにURLをドロップするか、下にURLを入力してください",
     "~URL_TAB.IMPORT": "取り込み",
     "~CLIENT_ERROR.TITLE": "エラー",
     "~ALERT_DIALOG.TITLE": "警告",
     "~ALERT_DIALOG.CLOSE": "閉じる",
-    "~ALERT.NO_PROVIDER": "適切なプロバイダーが利用できないため、この文章を開けません。",
+    "~ALERT.NO_PROVIDER": "適切なプロバイダーが利用できないため、このファイルを開けません。",
     "~GOOGLE_DRIVE.LOGIN_BUTTON_LABEL": "グーグルにログインします",
     "~GOOGLE_DRIVE.CONNECTING_MESSAGE": "グーグルに接続しています…",
     "~GOOGLE_DRIVE.ERROR_MISSING_CLIENTID": "グーグルドライブとの接続に失敗しました",
-    "~DOCSTORE.LOAD_403_ERROR": "%{filename}をロードするのに承認が必要です。<br><br>もしあなたが他の人の共有された文章を使っているならば、それは共有されていない可能性があります。",
-    "~DOCSTORE.LOAD_SHARED_404_ERROR": "共有文章の読み込みに失敗しました。<br><br>文章が共有されていない可能性はありませんか？",
+    "~DOCSTORE.LOAD_403_ERROR": "%{filename}をロードするのに承認が必要です。<br><br>もしあなたが他の人の共有されたファイルを使っているならば、それは共有されていない可能性があります。",
+    "~DOCSTORE.LOAD_SHARED_404_ERROR": "共有ファイルの読み込みに失敗しました。<br><br>文章が共有されていない可能性はありませんか？",
     "~DOCSTORE.LOAD_404_ERROR": "%{filename}の読み込みに失敗しました",
     "~DOCSTORE.SAVE_403_ERROR": "'%{filename}'を保存する権限がありません。<br><br>再びログインする必要性があるかもしれません。",
     "~DOCSTORE.SAVE_DUPLICATE_ERROR": "%{filename}を作成することができません。文章は既に存在しています。",
@@ -101,7 +101,7 @@
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_SAVE_ELSEWHERE": "他の場所に保存する",
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "後で行います",
     "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "Concord Cloudはシャットダウンしました。",
-    "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "他の場所に文書を保存してください",
+    "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "他の場所にファイルを保存してください",
     "~SHARE_DIALOG.SHARE_STATE": "共有画面：",
     "~SHARE_DIALOG.SHARE_STATE_ENABLED": "できます",
     "~SHARE_DIALOG.SHARE_STATE_DISABLED": "できていません",
