--- a/src/code/utils/lang/zh-Hans.json
+++ b/src/code/utils/lang/zh-Hans.json
@@ -99,7 +99,7 @@
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_SAVE_TITLE": "Concord云盘提醒",
     "~CONCORD_CLOUD_DEPRECATION.ALERT_SAVE_TITLE": "Concord云盘提醒",
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_SAVE_ELSEWHERE": "另存为",
-    "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "一会再做。",
+    "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "稍后再做",
     "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "Concord云盘已关闭",
     "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "请保存此文件到其他位置",
     "~SHARE_DIALOG.SHARE_STATE": "共享视图",
