--- a/src/code/utils/lang/ja.json
+++ b/src/code/utils/lang/ja.json
@@ -120,5 +120,6 @@
     "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "フルスクリーンボタンおよびスケール",
     "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "ボタンのテキストを始める",
     "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "グラフ上にデータ可視化タグを表示する",
-    "~CONFIRM.CHANGE_LANGUAGE": "変更が保存されていません。言語を変更してもよろしいですか。"
+    "~CONFIRM.CHANGE_LANGUAGE": "変更が保存されていません。言語を変更してもよろしいですか。",
+    "~FILE_STATUS.FAILURE": "Retrying..."
 }
