Update Japanese strings

--- a/src/code/utils/lang/ja.json
+++ b/src/code/utils/lang/ja.json
@@ -29,7 +29,7 @@
     "~PROVIDER.READ_ONLY": "読み込みに限る",
     "~PROVIDER.GOOGLE_DRIVE": "Google Drive",
     "~PROVIDER.DOCUMENT_STORE": "Concord Cloud",
-    "~PROVIDER.LOCAL_FILE": "自分のファイル",
+    "~PROVIDER.LOCAL_FILE": "名前を付けて保存",
     "~FILE_STATUS.SAVING": "保存する…",
     "~FILE_STATUS.SAVED": "すべての変更を保存する",
     "~FILE_STATUS.SAVED_TO_PROVIDER": "全ての変更が%{providerName}に保存されました",
@@ -67,8 +67,8 @@
     "~CONFIRM.REVERT_TO_LAST_OPENED": "最近開かれた状態へファイルを変換してもよろしいでしょうか？",
     "~CONFIRM.REVERT_TO_SHARED_VIEW": "最近共有された状態へファイルを変換してもよろしいでしょうか？",
     "~CONFIRM_DIALOG.TITLE": "よろしいですか？",
-    "~CONFIRM_DIALOG.YES": "イエス",
-    "~CONFIRM_DIALOG.NO": "ノー",
+    "~CONFIRM_DIALOG.YES": "YES",
+    "~CONFIRM_DIALOG.NO": "NO",
     "~LOCAL_FILE_DIALOG.DROP_FILE_HERE": "ここへファイルをドロップするか、クリックするとファイルが開けます。",
     "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_SELECTED": "申し訳ありませんが、開けるファイルは一つまでです。",
     "~LOCAL_FILE_DIALOG.MULTIPLE_FILES_DROPPED": "申し訳ありませんが、ドロップできるファイルは一つまでです。",
@@ -102,14 +102,14 @@
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "後で行います",
     "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "Concord Cloudはシャットダウンしました。",
     "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "他の場所にファイルを保存してください",
-    "~SHARE_DIALOG.SHARE_STATE": "共有画面：",
-    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "できます",
-    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "できていません",
-    "~SHARE_DIALOG.ENABLE_SHARING": "共有可能です",
+    "~SHARE_DIALOG.SHARE_STATE": "画面共有：",
+    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "可能です",
+    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "編集が必要です",
+    "~SHARE_DIALOG.ENABLE_SHARING": "共有可能にする",
     "~SHARE_DIALOG.STOP_SHARING": "共有を停止します",
-    "~SHARE_DIALOG.UPDATE_SHARING": "共有画面を上書きします",
+    "~SHARE_DIALOG.UPDATE_SHARING": "共有されている画面を上書きします",
     "~SHARE_DIALOG.PREVIEW_SHARING": "共有画面のプレビュー",
-    "~SHARE_DIALOG.ENABLE_SHARING_MESSAGE": "共有ができるとき、現在の画面のコピーが作成されます。\nこのコピーは共有できます。",
+    "~SHARE_DIALOG.ENABLE_SHARING_MESSAGE": "共有可能になると、現在の画面のコピーが作成されます。\nこのコピーを共有することができます。",
     "~SHARE_DIALOG.LINK_TAB": "リンク",
     "~SHARE_DIALOG.LINK_MESSAGE": "メールアドレスかテキストを貼り付けてください。",
     "~SHARE_DIALOG.EMBED_TAB": "埋め込み",
@@ -121,5 +121,5 @@
     "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "ボタンのテキストを始める",
     "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "グラフ上にデータ可視化タグを表示する",
     "~CONFIRM.CHANGE_LANGUAGE": "変更が保存されていません。言語を変更してもよろしいですか。",
-    "~FILE_STATUS.FAILURE": "Retrying..."
+    "~FILE_STATUS.FAILURE": "再接続しています…"
 }
