--- a/src/code/utils/lang/en-US.json
+++ b/src/code/utils/lang/en-US.json
@@ -80,6 +80,7 @@
   "~SHARE_DIALOG.EMBED_MESSAGE": "Embed code for including in webpages or other web-based content",
   "~SHARE_DIALOG.LARA_MESSAGE": "Use this link when creating an activity in LARA",
   "~SHARE_DIALOG.LARA_CODAP_URL": "CODAP Server URL:",
+  "~SHARE_DIALOG.CFM_ORIGIN_URL": "CFM Origin:",
   "~SHARE_DIALOG.LARA_AUTOLAUNCH_PAGE": "Autolaunch page",
   "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "Fullscreen button and scaling",
   "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "Launch Button Text:",
