Copied over CODAP's CFM save retry logic [#172367547]
This change allows the autosave to retry saving instead of disabling autosave after the first error.

It also adds a missing live-server dependency used in the package.json scripts and a missing dependency used to pull the PO editor strings.

The CODAP commit is 8c1843fb45643e641d3477ba48be18875e6cb62e.

--- a/src/code/utils/lang/en-US-master.json
+++ b/src/code/utils/lang/en-US-master.json
@@ -38,6 +38,7 @@
   "~FILE_STATUS.SAVED": "All changes saved",
   "~FILE_STATUS.SAVED_TO_PROVIDER": "All changes saved to %{providerName}",
   "~FILE_STATUS.UNSAVED": "Unsaved",
+  "~FILE_STATUS.FAILURE": "Retrying...",
 
   "~FILE_DIALOG.FILENAME": "Filename",
   "~FILE_DIALOG.OPEN": "Open",
@@ -86,7 +87,7 @@
   "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "Launch Button Text:",
   "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "Display data visibility toggles on graphs",
   "~SHARE_DIALOG.PLEASE_WAIT": "Please wait while we generate a shared link …",
-  
+
   "~SHARE_UPDATE.TITLE": "Shared View Updated",
   "~SHARE_UPDATE.MESSAGE": "The shared view was updated successfully.",
 
