Update translated strings [#174606216]

--- a/src/code/utils/lang/es.json
+++ b/src/code/utils/lang/es.json
@@ -102,22 +102,23 @@
     "~CONCORD_CLOUD_DEPRECATION.CONFIRM_DO_IT_LATER": "Lo haré más tarde",
     "~CONCORD_CLOUD_DEPRECATION.SHUT_DOWN_MESSAGE": "Concord Cloud ha sido cerrado",
     "~CONCORD_CLOUD_DEPRECATION.PLEASE_SAVE_ELSEWHERE": "Por favor guardar sus documentos en otra ubicación.",
-    "~SHARE_DIALOG.SHARE_STATE": "Shared view: ",
-    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "enabled",
-    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "disabled",
-    "~SHARE_DIALOG.ENABLE_SHARING": "Enable sharing",
-    "~SHARE_DIALOG.STOP_SHARING": "Stop sharing",
-    "~SHARE_DIALOG.UPDATE_SHARING": "Update shared view",
-    "~SHARE_DIALOG.PREVIEW_SHARING": "Preview shared view",
-    "~SHARE_DIALOG.ENABLE_SHARING_MESSAGE": "When sharing is enabled, a copy of the current view is created.  This copy can be shared.",
-    "~SHARE_DIALOG.LINK_TAB": "Link",
-    "~SHARE_DIALOG.LINK_MESSAGE": "Paste this into an email or text message ",
-    "~SHARE_DIALOG.EMBED_TAB": "Embed",
-    "~SHARE_DIALOG.EMBED_MESSAGE": "Embed code for including in webpages or other web-based content",
-    "~SHARE_DIALOG.LARA_MESSAGE": "Use this link when creating an activity in LARA",
-    "~SHARE_DIALOG.LARA_CODAP_URL": "CODAP Server URL:",
-    "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "Fullscreen button and scaling",
-    "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "Display data visibility toggles on graphs",
-    "~CONFIRM.CHANGE_LANGUAGE": "You have unsaved changes. Are you sure you want to change languages?",
-    "~FILE_STATUS.FAILURE": "Retrying..."
+    "~SHARE_DIALOG.SHARE_STATE": "Vista compartida:",
+    "~SHARE_DIALOG.SHARE_STATE_ENABLED": "habilitada",
+    "~SHARE_DIALOG.SHARE_STATE_DISABLED": "deshabilitada",
+    "~SHARE_DIALOG.ENABLE_SHARING": "Habilitar compartir",
+    "~SHARE_DIALOG.STOP_SHARING": "Dejar de compartir",
+    "~SHARE_DIALOG.UPDATE_SHARING": "Actualizar vista compartida",
+    "~SHARE_DIALOG.PREVIEW_SHARING": "Vista previa",
+    "~SHARE_DIALOG.ENABLE_SHARING_MESSAGE": "Cuando compartir está habilitado, se crea una copia. Esta copia puede ser compartida.",
+    "~SHARE_DIALOG.LINK_TAB": "Enlace",
+    "~SHARE_DIALOG.LINK_MESSAGE": "Pegar esto en mail o mensaje",
+    "~SHARE_DIALOG.EMBED_TAB": "Incrustar",
+    "~SHARE_DIALOG.EMBED_MESSAGE": "Código para incluir en otros sitios web",
+    "~SHARE_DIALOG.LARA_MESSAGE": "Usar este enlace al crear actividad en LARA",
+    "~SHARE_DIALOG.LARA_CODAP_URL": "URL server CODAP:",
+    "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "Pantalla completa y escalar",
+    "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "Switchear ver datos en gráficos",
+    "~CONFIRM.CHANGE_LANGUAGE": "Hay cambios sin guardar. ¿Seguro de cambiar de idioma?",
+    "~FILE_STATUS.FAILURE": "Reintento..",
+    "~SHARE_DIALOG.PLEASE_WAIT": "Por favor espere mientras se genera el enlace..."
 }
