--- a/src/code/utils/lang/zh-Hans.json
+++ b/src/code/utils/lang/zh-Hans.json
@@ -116,10 +116,9 @@
     "~SHARE_DIALOG.EMBED_MESSAGE": "在网页或者网页内容里嵌入代码",
     "~SHARE_DIALOG.LARA_MESSAGE": "在LARA里使用链接创建活动",
     "~SHARE_DIALOG.LARA_CODAP_URL": "CODAP服务器网址",
-    "~SHARE_DIALOG.LARA_AUTOLAUNCH_PAGE": "自动启动界面",
     "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "全屏按钮和缩放",
-    "~SHARE_DIALOG.LARA_LAUNCH_BUTTON_TEXT": "启动按钮文本",
     "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "图表数据可视化显示切换",
     "~CONFIRM.CHANGE_LANGUAGE": "有未保存更改，确定更改语言吗？",
-    "~FILE_STATUS.FAILURE": "重试..."
+    "~FILE_STATUS.FAILURE": "重试...",
+    "~SHARE_DIALOG.PLEASE_WAIT": "Please wait while we generate a shared link …"
 }
