--- a/src/code/utils/lang/el.json
+++ b/src/code/utils/lang/el.json
@@ -119,5 +119,6 @@
     "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "Πλήκτρο πλήρους οθόνης και κλιμάκωση",
     "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "Η προβολή δεδομένων ενεργοποιεί τα γραφήματα",
     "~CONFIRM.CHANGE_LANGUAGE": "Έχετε μη αποθηκευμένες αλλαγές. Είστε σίγουροι ότι θέλετε να αλλάξετε γλώσσα;",
-    "~FILE_STATUS.FAILURE": "Retrying..."
+    "~FILE_STATUS.FAILURE": "Retrying...",
+    "~SHARE_DIALOG.PLEASE_WAIT": "Please wait while we generate a shared link …"
 }
