--- a/src/code/utils/lang/he.json
+++ b/src/code/utils/lang/he.json
@@ -119,5 +119,6 @@
     "~SHARE_DIALOG.LARA_FULLSCREEN_BUTTON_AND_SCALING": "כפתור מסך מלא ומירכוז",
     "~SHARE_DIALOG.LARA_DISPLAY_VISIBILITY_TOGGLES": "הצגת מידע ויזואלי בגרפים",
     "~CONFIRM.CHANGE_LANGUAGE": "יש לכם שינויים לא שמורים. אתם בטוחים שתרצו להחליף שפה?",
-    "~FILE_STATUS.FAILURE": "Retrying..."
+    "~FILE_STATUS.FAILURE": "Retrying...",
+    "~SHARE_DIALOG.PLEASE_WAIT": "Please wait while we generate a shared link …"
 }
